--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Reduce heat to a simmer and cook until cook vegetables are tender, about 10 minu
 </p><br><br><br><br>
 <br>
 <br>
-<img src="Images/wonto.jpg" id="img2">
+<img src="Images/Wonto.jpg" id="img2">
 <h3>Salad</h3>
 <p>Mash green onion and ginger in a bowl with water. Mix in pork, 2 tablespoons rice wine, soy sauce, 2 teaspoons salt, sesame oil, and white pepper.
 Separate and place wonton wrappers onto your work surface. Spoon about 1 tablespoon of the pork-shrimp filling onto the center of each wrapper. Use your finger or a pastry brush to lightly moisten edges of wonton wrappers with water. Fold one corner of the wrapper over the filling onto the opposite corner to form a triangle. Press edges together to seal.
